main.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  line-height: 1.5;
  margin: auto;
  background-color: #ffffbf;
}

nav {
  position: fixed;
  top: 0;
  width: 100%;
  color: white;
  z-index: 1;
  border-bottom: solid 5px #ffffbf;
}

nav ul {
  top: 0;
  width: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
}

nav li {
  display: block;
  color: white;
  text-align: center;
  border: solid 3px black;
  transition:all 0.25s ease;
}

nav li button {
  background: transparent;
  box-shadow: 0px 0px 0px transparent;
  border: 0px solid transparent;
  text-shadow: 0px 0px 0px transparent;
  font-size: 24px;
  color: white; 
}

nav a {
  text-decoration: none;
  color: white;
  display:inline-block;
  padding: 5px 15px;
  font-weight: bold;
  width: 100%;
  transition:all 0.25s ease;
}

nav a:visited {
  color: white;
}

.hamburger {
  text-align: right;
  padding: 5px 15px;
}

.new-game-nav-link {
  background-color: #ffff00;
  border-radius: 5px;
  transition:all 0.25s ease;
}

.new-game-nav-link a, .new-game-nav-link a:visited {
  color: black;
  transition:all 0.25s ease;
}

.new-game-nav-link:active a {
  color:#ffff00;
  transition:all 0.25s ease;
}

.new-game-nav-link:active, 
.new-joke-button:active, 
.find-jokes-button:active {
  background-color: black;
  color: #ffff00;
  border-color: #ffff00;
  transition:all 0.25s ease;
  cursor: pointer;
} 

.new-game-nav-link, .find-jokes-nav-link, .how-to-play-nav-link {
  display: none;
}

nav li:active, 
.menu-button:active {
  background-color: #3f3f3f;
  transition:all 0.25s ease;
  cursor: pointer;
  font-weight: bold;
}

.menu-button:focus, .menu-button:active, .new-joke-button:focus, .new-joke-button:active, .find-jokes-button:focus, .find-jokes-button:active {
    outline: none;
}

header {
  text-align: center;
  padding-top: 50px;
  padding-bottom: 1em;
  margin-top: 0;
  transition-timing-function: linear;
  transition: margin-top 0.15s;
  transition-delay: 0.15s;
}

.extra-margin {
  margin-top: 144px;
  transition: linear 0.15s;
}

header > h1 {
  margin: 0;
  padding: 0;
}

header > p {
  padding: 0;
  margin-top: 0.5em;
  margin-bottom: 0;
  font-style: italic;
}

.how-to-play {
  color: white;
  width: 90%;
  margin: 0 auto;
  background-color: black;
  padding: 1em 2em 2em;
}

.joke-container, .winner, .directions-container, .find-jokes {
  color: white;
  background-color: black;
  text-align: center;
  padding: 1em;
  margin: 0 auto;
}

.winner {
  display: none;
}

.demo-video-container {
  margin: 3em auto 1em;
  max-width: 1000px;
}

.demo-video {
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  position: relative;
}

iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  border: solid 3px #1C1C1C;
  border-radius: 3px;
  transition:all 0.25s ease;
}

iframe:active {
  border-color: #c4302b;
  transition:all 0.25s ease;
}

.begin-duel-section {
  padding: 3em;
  display: flex;
  justify-content: center;
  background-color: #ffffbf;
}

.begin-duel, .new-joke-button, .find-jokes-button {
  padding: .5em 1em;
  background-color: #ffff00;
  border: solid 3px black;
  color: black;
  border-radius: 5px; 
  font-size: 20px;
  font-weight: 600;
  margin: 0.1em 0.2em;
  transition:all 0.25s ease;
  text-decoration: none;
}

.begin-duel:active {
  padding: 1.2em 2.4em;
  transition:all 0.25s ease;
  cursor: pointer;
  margin: 0 0;
  font-size: 24px;
} 

.directions-container h2 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 48px;
}

.toggle-directions {
  background-color: transparent;
  border: none;
  color: white;
  text-decoration: underline;
  transition:all 0.1s ease;
}

.toggle-directions:active {
  cursor: pointer;
  transform: scale(1.1);
}

.toggle-directions:active, .toggle-directions:focus {
  outline: none;
}

.directions, .joke {
  text-align: left;
  max-width: 500px;
}

.directions {
  margin-left: auto;
  margin-right: auto;
  border: solid 3px white;
  border-radius: 5px;
  padding: 1em 1.2em 1em 2.5em;
}

.joke {
  max-width: 500px;
}

.directions-container em {
  font-size: 1.4em;
  font-weight: bold;
  color: #ffff00;
  font-style: normal;
}

.joke {
  text-align: left;
}

.joke-container h2 {
  margin-top: 0;
}

.score-container {
  display: flex;
  flex-direction: row;
  text-align: center;
  justify-content: center;
  background-color: black;
  padding-bottom: 2em;
  margin: 0 auto;
}

.how-to-play, .joke-container, .score-container, .winner, .directions-container, .find-jokes {
  max-width: 1054px;
}

.score-container .add-score {
  display: block;
}

.player-1-score-container, .player-2-score-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 1em;
  width: 45%;
  border-top: solid black 5px;
  border-bottom: solid black 5px;
  max-width: 200px;
}

.player-1-score-container {
  border-left: solid black 5px;
  border-right: solid black 2.5px;
  background-color: #cfcfcf;
}

.player-2-score-container {
  border-left: solid black 2.5px;
  border-right: solid black 5px;
  background-color: #ffffbf;
}

.winner-decor {
  border: solid 5px #ffff00;
}

.score-container h2, .score-container p {
  margin: 0;
}

.score-container h2 {
  font-size: 1.3em;
}

.score-container p {
  font-size: .8em;
}

.score-container .player-1-score, .score-container .player-2-score {
  font-size: 3em;
  font-weight: bold;
  line-height: 1em;
}

.undo {
  margin-top: 5px;
}

.undo-container {
  padding-left: 80px;
}

.add-score {
  display: block;
  color: #003d00;
  border: solid 8px #003d00;
  border-radius: 50px;
  width: 72px;
  padding: 8px;
  align-self: center;
  transition: all 0.25s ease;
}

.player-1-score-container hr {
  color: #ffffbf;
}

.player-2-score-container hr {
  color: #cfcfcf;
}

.player-1-score-container .add-score {
  background-color: #ffffbf;
  transition: all 0.25s ease;
}

.player-2-score-container .add-score {
  background-color: #cfcfcf;
  transition: all 0.25s ease;
}

.player-1-score-container h2 {
  border-bottom: solid 2px #ffffbf;
  border-top: solid 2px #ffffbf;
}

.player-2-score-container h2 {
  border-bottom: solid 2px #cfcfcf;
  border-top: solid 2px #cfcfcf;
}

.plus-player-1:active {
  cursor: pointer;
  border-color: black;
  background-color: #cfcfcf;
  transition: all 0.25s ease;
}

.plus-player-2:active {
  cursor: pointer;
  border-color: black;
  background-color: #ffffbf;
  transition: all 0.25s ease;
}

.undo:active {
  cursor: pointer;
  color: #c4302b;
}

.find-jokes input {
  margin-bottom: 2em;
  min-width: 200px;
  width: 40%;
  padding: 0.5em;
  border: solid #3f3f3f 3px;
  border-radius: 5px;
  font-family: FontAwesome;
  font-size: 1.2em;
}

.find-jokes input:focus {
  outline: solid 1px yellow;
}

@media (min-width: 768px) {
  
  nav ul {
    top: 0;
    width: 100%;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: black;
  }

  .new-game-nav-link, .find-jokes-nav-link, .how-to-play-nav-link {
    display: block;
  }
  
  nav li {
    float: right;
    display: block;
    color: white;
    text-align: center;
    text-decoration: none;
    border: solid 3px black;
  }
  
  .new-game-nav-link {
    font-weight: bold;
    background-color: #ffff00;
    color: black;
    border-radius: 5px;
  }

  .new-game-nav-link:hover {
    background-color: black;
    color: #ffff00;
    border-color: #ffff00;
    transition:all 0.25s ease;
  } 

  .joke {
    margin-left: auto;
    margin-right: auto;
    border: solid 3px white;
    border-radius: 5px;
    padding: 1em 1.2em 1em 1.5em;
  }

  .hamburger {
    display: none;
  }

  .score-container {
    padding-top: 1em;
  }

  .score-container hr {
    width: 100px;
    border: 2px solid;
  }

  .add-score {
    margin-top: 8px;
  }

  .player-1-score-container h2, .player-2-score-container h2 {
    border: none;
  }
  
  .new-joke-button {
    padding: 1em 2em;
    border-radius: 5px; 
    font-size: 20px;
    font-weight: 600;
    margin: 0.2em 0.4em;
  }

  nav li:hover, 
  .menu-button:hover {
    background-color: #3f3f3f;
    transition:all 0.25s ease;
    cursor: pointer;
    font-weight: bold;
  }

  .new-game-nav-link:hover a {
    color:#ffff00;
    transition:all 0.25s ease;
  }
  
  .new-game-nav-link:hover, 
  .new-joke-button:hover, 
  .find-jokes-button:hover {
    background-color: black;
    color: #ffff00;
    border-color: #ffff00;
    transition:all 0.25s ease;
    cursor: pointer;
  } 

  nav li:hover, 
  .menu-button:hover {
    background-color: #3f3f3f;
    transition:all 0.25s ease;
    cursor: pointer;
    font-weight: bold;
  }

  iframe:hover {
    border-color: #c4302b;
    transition:all 0.25s ease;
  }

  .begin-duel:hover {
    padding: 1.2em 2.4em;
    transition:all 0.25s ease;
    cursor: pointer;
    margin: 0 0;
    font-size: 24px;
  } 

  .toggle-directions:hover {
    cursor: pointer;
    transform: scale(1.1);
  }

  .plus-player-2:hover {
    cursor: pointer;
    border-color: black;
    background-color: #ffffbf;
    transition: all 0.25s ease;
  }
  
  .undo:hover {
    cursor: pointer;
    color: #c4302b;
  }

  .undo:hover {
    cursor: pointer;
    color: #c4302b;
  }
}

